--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,16 +15,16 @@ spring.security.user.password=123345
 spring.security.user.roles=ADMIN
 
 #mysql
-<<<<<<< Updated upstream
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://192.168.6.128:3306/taira_db?serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8
-#spring.datasource.username=root
-#spring.datasource.password=taira
-=======
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://192.168.6.128:3306/taira_db?serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=taira
 
-#myhabits日志
-mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+#myhabits
+mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.type-aliases-package=com.taira.box.bean.model
+#mybatis-plus.mapper-locations=classpath:mybatis/mapper/*.xml
+#mybatis-plus.type-aliases-package=com.taira.box.bean.model
+
+# 日志
+#mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
